[package]
name = "quad-files"
version = "0.1.3"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.4"

[dev-dependencies]
egui-macroquad = "0.15.0"
macroquad = "0.4.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.15.2",default-features = false, features = ["gtk3"] }
